add description about Java 9 support and also add new contributor's name.